<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newExpenseFragment">

    <EditText
        android:id="@+id/exp_category_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/exp_amount_input"
        app:layout_constraintTop_toBottomOf="@+id/exp_amount_input" />

    <EditText
        android:id="@+id/exp_notes_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/exp_category_input"
        app:layout_constraintTop_toBottomOf="@+id/exp_category_input" />

    <EditText
        android:id="@+id/exp_amount_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/exp_date_input"
        app:layout_constraintTop_toBottomOf="@+id/exp_date_input" />

    <TextView
        android:id="@+id/reg_exp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/expense_reg_title"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/exp_date"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_date_input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/exp_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_amount"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_amount_input"
        app:layout_constraintStart_toStartOf="@+id/exp_date" />

    <TextView
        android:id="@+id/exp_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_category"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_category_input"
        app:layout_constraintStart_toStartOf="@+id/exp_amount" />

    <TextView
        android:id="@+id/exp_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_notes"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_notes_input"
        app:layout_constraintStart_toStartOf="@+id/exp_category" />

    <Button
        android:id="@+id/reg_exp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/exp_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/exp_date"
        app:layout_constraintTop_toBottomOf="@+id/reg_exp_title" />
</androidx.constraintlayout.widget.ConstraintLayout>