<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8F1AC">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        android:text="@string/Sign_Up"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_User"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/new_password"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/Password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/new_User"
        app:layout_constraintTop_toBottomOf="@+id/new_User" />

    <TextView
        android:id="@+id/new_name"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/new_password"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="264dp"
        android:layout_height="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:text="@string/signup_header"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/new_email"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/new_name"
        app:layout_constraintTop_toBottomOf="@+id/new_name" />

    <EditText
        android:id="@+id/new_UserInput"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/new_passwordInput"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/new_UserInput"
        app:layout_constraintTop_toBottomOf="@+id/new_UserInput" />

    <EditText
        android:id="@+id/new_nameInput"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/new_passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/new_passwordInput" />

    <EditText
        android:id="@+id/new_emailInput"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/new_nameInput"
        app:layout_constraintTop_toBottomOf="@+id/new_nameInput" />

    <Button
        android:id="@+id/submit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="144dp"
        android:text="@string/Sign_Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>